# mmd_project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  3-recommendation.ipynb  README.md  clusters.npy  loocv.py  main.py  parameters_research.ipynb  predict_score.py  pyproject.toml  rGLSVD.py
data/: ._3-ratings.csv
notebooks/lab_3_recommendation/: 3-recommendation.ipynb
src/: colaborative_class.py  hr_arhr.py  loocv.py  loocv2.py  rGLSVD.py  rglsvd_class.py  sGLSVD.py  sGLSVD2.py  sglsvd_class.py  utils.py
