[project]
name = "mmd-project"
version = "0.1.0"
description = "Mining Massive Datasets project, University of Verona (A.Y. 2024/2025)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "mypy>=1.16.1",
    "numpy>=2.3.2",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "scikit-learn>=1.7.1",
]

[tool.ruff]
line-length = 88
fix = true
unsafe-fixes = true

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

